--- a/sass/home.scss
+++ b/sass/home.scss
@@ -36,11 +36,13 @@ $home_SP_top:458;
     top: 50%;
     margin-left: -640px;
     margin-top: -415px;
-    overflow: auto;
+    //overflow: auto;
+    overflow: hidden;
     @media screen and (max-width: 1048px)  { 
         position: absolute;           
         left: -116px;
         margin-left: 0px;
+        
         
     }
     
